chore: add version to config.mk and update definition of debug functions

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 include ../config.mk
 
 CC = gcc
-CFLAGS = -Wall -Wextra -c -DDEBUG
+CFLAGS = -Wall -Wextra -c -DPACKAGE=\"$(EXEC_NAME)\" -DVERSION=\"$(VERSION)\"
 LDLIBS = -lX11 -lXrandr -lImlib2
 
 SRC = $(shell echo *.c)
@@ -9,7 +9,12 @@ INC = $(shell echo *.h)
 
 TARGETS = $(SRC:.c=.o)
 
-default : $(EXEC_NAME)
+default : debug
+
+debug : $(EXEC_NAME)
+
+release : CFLAGS += -DRELEASE
+release : $(EXEC_NAME)
 
 $(EXEC_NAME) : $(TARGETS)
 	$(CC) $(LDLIBS) $(TARGETS) -o $@ 
@@ -21,4 +26,4 @@ clean:
 	@rm -f *.o $(EXEC_NAME)
 
 
-.PHONY : clean default
+.PHONY : clean default debug release
