chore: fix: can not compile on gcc (Debian)

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,6 @@ include ../config.mk
 CC = gcc
 CFLAGS = -Wall -Wextra -c -DPACKAGE=\"$(EXEC_NAME)\" -DVERSION=\"$(VERSION)\"
 LDLIBS = -lX11 -lXrandr -lImlib2
-DEBUG_FLAG = -g
 
 SRC = $(shell echo *.c)
 INC = $(shell echo *.h)
@@ -12,20 +11,20 @@ TARGETS = $(SRC:.c=.o)
 
 default : debug
 
+debug : CFLAGS += -g
 debug : $(EXEC_NAME)
 
 release : CFLAGS += -DRELEASE
-release : DEBUG_FLAG = 
 release : $(EXEC_NAME)
 
 $(EXEC_NAME) : $(TARGETS)
-	$(CC) $(LDLIBS) $(TARGETS) -o $@ $(DEBUG_FLAG)
+	$(CC) $(TARGETS) $(LDLIBS) -o $@
 
 options.o : options.c options.h debug.h help.inc
-	$(CC) $(CFLAGS) $< -o $@ $(DEBUG_FLAG)
+	$(CC) $(CFLAGS) $< -o $@
 
 %.o : %.c %.h debug.h
-	$(CC) $(CFLAGS) $< -o $@ $(DEBUG_FLAG)
+	$(CC) $(CFLAGS) $< -o $@
 
 %.inc : %.raw
 	sed 's/^\(.*\)$$/"\1\\n"/' < $< > $@
